[project]
name = "file-org"
version = "0.1.0"
description = ""
authors = [
    {name = "Saurabh Ram",email = "saurabhram37@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "portia-sdk-python[google] (>=0.7.2,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
